// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar test NavBar snapshot with user with avatar 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to="/ordersPage"
      >
        <Button
          color="inherit"
          data-testid="orderButton"
        >
          Order
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="menuButton"
      >
        Menu
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Avatar
          alt="avatar"
          className="avatar"
          src="avatar"
        />
        <Typography
          color="inherit"
        >
          Logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="orderLink"
            to="/ordersPage"
          >
            <Typography
              color="textPrimary"
            >
              Order
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem>
          <Typography
            color="textPrimary"
          >
            Menu
          </Typography>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Avatar
            alt="avatar"
            className="avatar"
            src="avatar"
          />
          <Typography
            color="textPrimary"
          >
            Logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot with user with avatar with role 2 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to="/ordersPage"
      >
        <Button
          color="inherit"
          data-testid="orderButton"
        >
          Order
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="menuButton"
      >
        Menu
      </Button>
      <Link
        className="link"
        to="/kithenInterfacePage"
      >
        <Button
          color="inherit"
          data-testid="kithenButton"
        >
          Kithen
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Avatar
          alt="avatar"
          className="avatar"
          src="avatar"
        />
        <Typography
          color="inherit"
        >
          Logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="orderLink"
            to="/ordersPage"
          >
            <Typography
              color="textPrimary"
            >
              Order
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem>
          <Typography
            color="textPrimary"
          >
            Menu
          </Typography>
        </MenuItem>
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="kithenLink"
            to="/kithenInterfacePage"
          >
            <Typography
              color="textPrimary"
            >
              Kithen
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Avatar
            alt="avatar"
            className="avatar"
            src="avatar"
          />
          <Typography
            color="textPrimary"
          >
            Logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot with user without avatar 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to="/ordersPage"
      >
        <Button
          color="inherit"
          data-testid="orderButton"
        >
          Order
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="menuButton"
      >
        Menu
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Typography
          color="inherit"
        >
          Logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="orderLink"
            to="/ordersPage"
          >
            <Typography
              color="textPrimary"
            >
              Order
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem>
          <Typography
            color="textPrimary"
          >
            Menu
          </Typography>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Typography
            color="textPrimary"
          >
            Logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot without user 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to="/ordersPage"
      >
        <Button
          color="inherit"
          data-testid="orderButton"
        >
          Order
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="menuButton"
      >
        Menu
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        Login
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="orderLink"
            to="/ordersPage"
          >
            <Typography
              color="textPrimary"
            >
              Order
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem>
          <Typography
            color="textPrimary"
          >
            Menu
          </Typography>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          Login
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;
